# ClipboardMonitor

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ethicalcheck.yml  rust.yml  testingLocal.yml
assets/: clipboard-monitor.desktop
src/: main.rs
