[package]
name = "clipboard-monitor"
version = "1.0.0"
edition = "2024"
description = "Monitor de portapapeles con interfaz gráfica"
license = "MIT"

[dependencies]
eframe = "0.26"
egui = "0.26"
arboard = "3.3"

[package.metadata.deb]
assets = [
    ["assets/icon.png", "/usr/share/icons/hicolor/256x256/apps/clipboard-monitor.png", "0644"]
]
maintainer = "Yorlin Quispe Ygnacio qyyorlin51@gmail.com"
license-file = "LICENSE"
section = "utils"
priority = "optional"

[package.metadata.rpm]
assets = [
    ["assets/icon.png", "/usr/share/icons/hicolor/256x256/apps/clipboard-monitor.png", "0644"]
]